# learnopengl_stars

./: .gitmodules  CMakeLists.txt  README.md
shaders/: fragment_shader.fs  point_sprites.fs  point_sprites.vs  vertex_shader.vs
src/: main.cpp  point_sprites.cpp  transformations.cpp
